# trading-journal

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose-example.yaml  docker-compose.yml
backend/: .gitignore  README.md  README_zh.md  alembic.ini  app.py  dev-requirements.txt  docker-entrypoint.sh  main.py  openapi.yaml  pyproject.toml  requirements.in  requirements.txt  ruff.toml  settings.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_trade_archived_at.py  0003_app_config.py  20260421_0001_scaffold_baseline.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/src/trading_journal/: config.py  db.py  main.py
backend/src/trading_journal/api/: accounts.py  dashboard.py  health.py  instruments.py  positions.py  strategy_configs.py  strategy_meta.py  trade_plans.py  trades.py
backend/src/trading_journal/auth/: __init__.py  backend.py  deps.py  secret.py  users.py
backend/src/trading_journal/models/: __init__.py  _enums.py  account.py  position.py  (+7 more)
backend/testhelpers/: tradecycles.sh
backend/tests/: conftest.py  test_accounts.py  test_app.py  test_auth.py  test_config.py  test_cookie_secret.py  test_crud.py  test_dashboard.py  test_db.py  test_db_migration.py  test_health.py  test_instruments.py  test_main.py  test_migrations.py  test_models.py  test_positions.py  test_security.py  test_service.py  test_settings.py  test_spa_fallback.py  test_strategy_configs.py  test_strategy_meta.py  test_trade_plans.py  test_trades.py
backend/trading_journal/: crud.py  db.py  db_migration.py  dto.py  models.py  models_v1.py  security.py  service.py
backend/utils/: db_migration.py  db_mirgration.py
(+136 files in other folders)
